--- a/app/src/main/res/layout/activity_sood_yab.xml
+++ b/app/src/main/res/layout/activity_sood_yab.xml
@@ -63,6 +63,12 @@
                 android:id="@+id/textView9"
                 android:layout_gravity="center_horizontal" />
 
+            <CheckBox
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="New CheckBox"
+                android:id="@+id/checkBox4" />
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
