--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -37,7 +37,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="FUCK YOU SINA"
+        android:text="FUCK YOU SINA!!"
         android:id="@+id/textView44"
         android:layout_centerVertical="true"
         android:layout_alignLeft="@+id/imageButton2"
