--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,8 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.android.vamyab24.MainActivity">
+    tools:context="com.example.android.vamyab24.MainActivity"
+    android:background="@color/abc_search_url_text_normal">
 
 
     <ImageButton
