--- a/app/src/main/res/layout/activity_sood_yab.xml
+++ b/app/src/main/res/layout/activity_sood_yab.xml
@@ -223,7 +223,7 @@
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:text="پرداخت قسط هر "
-            android:id="@+id/textView4"
+            android:id="@+id/pardakhte_ghest_har"
             android:layout_alignBottom="@+id/editText4"
             android:layout_alignParentRight="true"
             android:layout_alignParentEnd="true" />
@@ -243,8 +243,8 @@
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:text="ماه"
-            android:id="@+id/textView21"
-            android:layout_above="@+id/button"
+            android:id="@+id/mah"
+            android:layout_above="@+id/SoodYab_go"
             android:layout_toLeftOf="@+id/editText4"
             android:layout_toStartOf="@+id/editText4" />
 
@@ -252,7 +252,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="جستجو"
-            android:id="@+id/button"
+            android:id="@+id/SoodYab_go"
             android:layout_below="@+id/editText4"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
