--- a/app/src/main/res/layout/activity_entering_number.xml
+++ b/app/src/main/res/layout/activity_entering_number.xml
@@ -30,37 +30,61 @@
         android:layout_alignBottom="@+id/textView44"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
-    <GridLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:columnCount="3"
-        android:layout_below="@+id/textView44"
-        android:layout_centerHorizontal="true">
-        <Button android:text="1"
-            android:id="@+id/n1"/>
-        <Button android:text="2"
-            android:id="@+id/n2"
-            android:layout_marginLeft="@+id/n1"/>
-        <Button android:text="3"
-            android:id="@+id/n3"/>
-        <Button android:text="4"
-            android:id="@+id/n4"/>
-        <Button android:text="5"
-            android:id="@+id/n5"/>
-        <Button android:text="6"
-            android:id="@+id/n6"/>
-        <Button android:text="7"
-            android:id="@+id/n7"/>
-        <Button android:text="8"
-            android:id="@+id/n8"/>
-        <Button android:text="9"
-            android:id="@+id/n9"/>
-        <Button android:text="0"
-            android:id="@+id/n0"/>
-        <Button android:text="del"
-            android:id="@+id/dele"/>
-        <Button android:text="Done"
-            android:id="@+id/done"/>
-    </GridLayout>
+    <!--<RelativeLayout-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:orientation="horizontal"-->
+        <!--android:columnCount="3"-->
+        <!--android:layout_below="@+id/textView44"-->
+        <!--android:layout_centerHorizontal="true">-->
+        <!--<Button android:text="1"-->
+            <!--android:id="@+id/n1"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="50dp" />-->
+        <!--<Button android:text="2"-->
+            <!--android:id="@+id/n2"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="50dp"-->
+            <!--android:layout_marginLeft="@+id/n1"/>-->
+        <!--<Button android:text="3"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="50dp"-->
+            <!--android:id="@+id/n3"/>-->
+        <!--<Button android:text="4"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="50dp"-->
+            <!--android:id="@+id/n4"/>-->
+        <!--<Button android:text="5"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="50dp"-->
+            <!--android:id="@+id/n5"/>-->
+        <!--<Button android:text="6"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="50dp"-->
+            <!--android:id="@+id/n6"/>-->
+        <!--<Button android:text="7"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="50dp"-->
+            <!--android:id="@+id/n7"/>-->
+        <!--<Button android:text="8"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="50dp"-->
+            <!--android:id="@+id/n8"/>-->
+        <!--<Button android:text="9"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="50dp"-->
+            <!--android:id="@+id/n9"/>-->
+        <!--<Button android:text="0"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="50dp"-->
+            <!--android:id="@+id/n0"/>-->
+        <!--<Button android:text="del"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="50dp"-->
+            <!--android:id="@+id/dele"/>-->
+        <!--<Button android:text="Done"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="50dp"-->
+            <!--android:id="@+id/done"/>-->
+    <!--</RelativeLayout>-->
 </RelativeLayout>
