--- a/app/src/main/res/layout/activity_entering_number.xml
+++ b/app/src/main/res/layout/activity_entering_number.xml
@@ -36,7 +36,7 @@
         android:layout_height="wrap_content"
 
 
-        android:layout_below="@+id/textView44"
+        android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true">
         <Button
             android:text="1"
